# los-libros

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.serena/: project.yml
apps/amnesia/: .mcp.json  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/amnesia-server/: .env.example  Cargo.toml  Dockerfile  libros.db  libros.db-wal
apps/amnesia-server/benches/: document_parsing.rs  search_performance.rs
apps/amnesia-server/src/: config.rs  lib.rs  main.rs  state.rs
apps/amnesia-server/src/annotations/: types.rs
apps/amnesia-server/src/bibliography/: formatter.rs  mod.rs  types.rs
apps/amnesia-server/src/cfi/: comparator.rs  parser.rs  types.rs
apps/amnesia-server/src/db/: highlights.rs  mod.rs  schema.rs  search.rs
apps/amnesia-server/src/document/: cache.rs  error.rs  mod.rs  traits.rs  types.rs
apps/amnesia-server/src/epub/: mod.rs  parser.rs  types.rs
apps/amnesia-server/src/formats/: mod.rs
apps/amnesia-server/src/formats/epub/: mod.rs  parser.rs  renderer.rs
apps/amnesia-server/src/formats/pdf/: mod.rs  parser.rs  renderer.rs
apps/amnesia-server/src/html/: highlight_injector.rs
apps/amnesia-server/src/mupdf/: context.rs  mod.rs  safe.rs  stext.rs
apps/amnesia-server/src/ocr/: injector.rs  mod.rs  provider.rs  service.rs  types.rs
apps/amnesia-server/src/opds/: feed.rs  mod.rs
apps/amnesia-server/src/pdf/: annotation_extractor.rs  cache.rs  mod.rs  mupdf_parser.rs  parser.rs  types.rs
apps/amnesia-server/src/routes/: bibliography.rs  documents.rs  extract.rs  highlights.rs  mod.rs  opds.rs  pdf.rs  search.rs  upload.rs
apps/amnesia-server/src/storage/: mod.rs  s3_client.rs  types.rs
apps/amnesia-server/src/sync/: mod.rs  store.rs
apps/amnesia-server/src/upload/: chunk_store.rs  deduplication.rs  mod.rs  session.rs  types.rs
apps/amnesia/src/: main.ts  styles.css
apps/amnesia/src/api/: api.ts  disposable.ts  index.ts  opds-generator.ts  types.ts
apps/amnesia/src/assets/: asset-extractor.ts  cover-extractor.ts  lightbox-adapter.ts  ocr-client.ts  vault-exporter.ts
apps/amnesia/src/bookmarks/: bookmark-service.ts  bookmark-types.ts  index.ts
apps/amnesia/src/cache/: cache-monitor.ts  cache-stats-view.ts  index.ts  indexed-db-store.ts  lru-cache.ts
apps/amnesia/src/calibre/: calibre-converter.ts  calibre-reducer.ts  calibre-service.ts  calibre-types.ts  incremental-sync.ts  index.ts
apps/amnesia/src/components/: Portal.svelte
apps/amnesia/src/dedup/: deduplication-manager.ts  index.ts
apps/amnesia/src/generators/: highlight-generator.ts  index-generator.ts  index.ts
apps/amnesia/src/helpers/: store.ts
apps/amnesia/src/highlights/: highlight-service.ts  highlight-store.ts  highlights-view.ts  pdf-highlight-service.ts
apps/amnesia/src/images/: images-view.ts
apps/amnesia/src/integrations/: conflict-resolver.ts  deduplication.ts  doc-doctor-bridge.ts  index.ts  knowledge-gap-filter.ts  sync-manager.ts  sync-telemetry.ts
apps/amnesia/src/migration/: backup.ts  index.ts  link-updater.ts  migrator.ts
apps/amnesia/src/migrations/: 001-add-categories.ts  index.ts
apps/amnesia/src/modals/: DedupStatsModal.ts  OPDSFeedModal.ts  RegenerateConfirmModal.ts  index.ts
apps/los-libros/: README.md  esbuild.config.mjs  libros.db  manifest.json  package.json
apps/los-libros-server/: .env.example  Cargo.toml  Dockerfile  libros.db-shm
apps/los-libros-server/src/: error.rs  main.rs  state.rs
apps/los-libros/src/: main.ts  styles.css
apps/los-libros/src/wasm/epub-processor/: Cargo.toml
apps/los-libros/src/wasm/epub-processor/src/: lib.rs
apps/los-libros/src/wasm/epub-processor/src/cfi/: mod.rs
apps/los-libros/src/wasm/epub-processor/src/epub/: mod.rs  opf.rs  parser.rs
apps/los-libros/src/wasm/epub-processor/src/search/: mod.rs
docs/architecture/: doc-doctor-integration.md  unified-sync.md
docs/plans/: ecosystem-expansion-prd.json  file-system-ui-integration.md  mupdf-migration-plan.md  pdf-support-implementation.md  pdfium-server-testing-plan.md  unified-sync-architecture-prd.md
docs/requirements/: epub-renderer-PRD.md  reader-PRD.md
docs/research/: 2026-01-08-ecosystem-expansion-research.md  renderer.md
docs/research/2026-01-06/: PDFium Server Hangs After First Use.md  Svelte Plugin UI Research.md  Vector PDF Text Rendering in Electron.md  claude-pdfium-stall-research-findings.md  pdfium-global-state-corruption-research.md  pdfium-issue-research-prompt.md
docs/research/2026-01-07/: Obsidian PDF Plugin Research.md  PRD-amnesia-migration.md
docs/research/2026-01-08/: Obsidian Plugin Research Amnesia Doc Doctor.md
docs/research/Archive/: Designing Obsidian Plugin API.md  EPUB Reader Architecture Research.md  EPUB Reader Highlight Research.md  Obsidian Sync Architecture Research.md
docs/specifications/: SPEC-amnesia-hud.md  file-system-architecture.md
docs/specifications/API/: api-v1.0.md  events.md  expansion-points.md  security.md  ui-extensibility.md
docs/testing/: benchmark-results.md  devtools-mcp-guide.md  live-testing-guide.md
(+375 files in other folders)
