[package]
name = "amnesia-server"
version = "0.1.0"
edition = "2021"
description = "Amnesia - Self-hosted ebook server with S3 native support"
license = "MIT"
authors = []

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# S3/Storage
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

# XML parsing (OPDS, metadata.opf)
quick-xml = { version = "0.31", features = ["serialize"] }

# EPUB parsing
rbook = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# URL encoding
urlencoding = "2"

# Hashing (for chunked upload deduplication)
sha2 = "0.10"
hex = "0.4"

# Streaming
futures = "0.3"

# HTML processing
lol_html = "2.0"

# PDF rendering
pdfium-render = { version = "0.8", features = ["thread_safe"] }
image = "0.25"
lru = "0.12"

# OCR
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
tesseract = { version = "0.14", optional = true }

[features]
default = []
ocr-tesseract = ["tesseract"]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
axum-test = "14"
tempfile = "3.24.0"
